bardii.txt




PS C:\Users\Ghazal\Documents\local-repo\my_first_repo> & C:/Users/Ghazal/AppData/Local/Programs/Python/Python311/python.exe c:/Users/Ghazal/Documents/local-repo/my_first_repo/newdirectory/jome2/myfirstapp/models.py
Traceback (most recent call last):
  File "c:\Users\Ghazal\Documents\local-repo\my_first_repo\newdirectory\jome2\myfirstapp\models.py", line 5, in <module>
    class studiocoaches(models.Model):
  File "C:\Users\Ghazal\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\db\models\base.py", line 129, in __new__
    app_config = apps.get_containing_app_config(module)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Ghazal\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\apps\registry.py", line 260, in get_containing_app_config
  File "C:\Users\Ghazal\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\conf\__init__.py", line 102, in __getattr__
    self._setup(name)
  File "C:\Users\Ghazal\AppData\Local\Programs\Python\Python311\Lib\site-packages\django\conf\__init__.py", line 82, in _setup
    raise ImproperlyConfigured(
django.core.exceptions.ImproperlyConfigured: Requested setting INSTALLED_APPS, but settings are not configured. You must either define the environment variable DJANGO_SETTINGS_MODULE or call settings.configure() before accessing settings.     
PS C:\Users\Ghazal\Documents\local-repo\my_first_repo> cd newdirectory
PS C:\Users\Ghazal\Documents\local-repo\my_first_repo\newdirectory> cd jome2     
PS C:\Users\Ghazal\Documents\local-repo\my_first_repo\newdirectory\jome2> python 
manage.py runserver
Watching for file changes with StatReloader
Performing system checks...

System check identified no issues (0 silenced).
October 14, 2023 - 12:05:11
Django version 4.2.5, using settings 'jome2.settings'
Starting development server at http://127.0.0.1:8000/
Quit the server with CTRL-BREAK.

Not Found: /
[14/Oct/2023 12:05:13] "GET / HTTP/1.1" 404 2725
Not Found: /
[14/Oct/2023 12:05:15] "GET / HTTP/1.1" 404 2725
[14/Oct/2023 12:05:32] "GET /admin/ HTTP/1.1" 200 9516
[14/Oct/2023 12:05:36] "GET /admin/auth/user/ HTTP/1.1" 200 11447
[14/Oct/2023 12:05:36] "GET /admin/jsi18n/ HTTP/1.1" 200 3343
[14/Oct/2023 12:05:36] "GET /static/admin/img/search.svg HTTP/1.1" 304 0
[14/Oct/2023 12:05:36] "GET /static/admin/img/icon-yes.svg HTTP/1.1" 304 0       
[14/Oct/2023 12:05:39] "GET /admin/auth/user/ HTTP/1.1" 200 11447
[14/Oct/2023 12:05:49] "GET /admin/jsi18n/ HTTP/1.1" 200 3343
[14/Oct/2023 12:05:49] "GET /admin/auth/user/?o=-4.1 HTTP/1.1" 200 12045
[14/Oct/2023 12:05:50] "GET /admin/jsi18n/ HTTP/1.1" 200 3343
[14/Oct/2023 12:05:50] "GET /admin/auth/user/?o=-4.1 HTTP/1.1" 200 12045
[14/Oct/2023 12:05:50] "GET /admin/jsi18n/ HTTP/1.1" 200 3343
[14/Oct/2023 12:05:52] "GET /admin/jsi18n/ HTTP/1.1" 200 3343
PS C:\Users\Ghazal\Documents\local-repo\my_first_repo\newdirectory\jome2> python 
manage.py create superuser --username=bardia --email=amiroism@gmail.com
Unknown command: 'create'. Did you mean migrate?
Type 'manage.py help' for usage.
PS C:\Users\Ghazal\Documents\local-repo\my_first_repo\newdirectory\jome2> python 
manage.py createsuperuser --username=amiroo --email=amiroism@gmail.com
Password:
Password (again):
Superuser created successfully.
PS C:\Users\Ghazal\Documents\local-repo\my_first_repo\newdirectory\jome2>        
PS C:\Users\Ghazal\Documents\local-repo\my_first_repo\newdirectory\jome2> python 
manage.py runserver
Watching for file changes with StatReloader
System check identified no issues (0 silenced).
October 14, 2023 - 12:21:03
Django version 4.2.5, using settings 'jome2.settings'
Starting development server at http://127.0.0.1:8000/
Quit the server with CTRL-BREAK.

Not Found: /
[14/Oct/2023 12:21:04] "GET / HTTP/1.1" 404 2725
[14/Oct/2023 12:21:11] "GET /admin/ HTTP/1.1" 200 9516
[14/Oct/2023 12:21:15] "GET /admin/auth/user/ HTTP/1.1" 200 11849
[14/Oct/2023 12:21:15] "GET /admin/jsi18n/ HTTP/1.1" 200 3343
PS C:\Users\Ghazal\Documents\local-repo\my_first_repo\newdirectory\jome2> python 
manage.py shell
Python 3.11.5 (tags/v3.11.5:cce6ba9, Aug 24 2023, 14:38:34) [MSC v.1936 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> from django.contrib.auth.models imporst User
  File "<console>", line 1
    from django.contrib.auth.models imporst User
                                    ^^^^^^^
SyntaxError: invalid syntax
>>> from django.contrib.auth.models import User
>>> aaa=User.objects.create_user('diba' , 'diba@yahoomail.com' , 'passediba')
>>> aaa.is_staff=True
>>> aaa.save()
>>> 